--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@
     justify-content: center;
     color:rgb(251, 250, 249);
     background-image: url("https://w0.peakpx.com/wallpaper/960/362/HD-wallpaper-library-background-beautiful-library-book.jpg");
+    background-size:cover;
     height:400px;
     width:1400px;
     border-radius: 15px;
