--- a/index.css
+++ b/index.css
@@ -35,6 +35,13 @@ h2{
 .f2{
     background-color: black;
 }
-@media{(max-width<=786px)
-    
+.st{
+    background-color: black;
 }
+.s1{
+    color:white;
+    text-align: center;
+    justify-content:center;
+    font-size: 25px;
+}
+
